# CELADRO-3D-CUDA

./: .gitignore  CMakeLists.txt  README.md  howtomake.txt
example/: Untitled.ipynb  comptue_COM_from_JSON.py  compute_stress_field_from_FF.cpp  createInput.py  create_inputFiles_01012025.py  cuda_indexing_test.ipynb  kolmogrov_complexity_04012025.py  kullback_liebler_04012025.py  lognormal_generator.ipynb  mechanical_information_flow_05312025.ipynb  mutual_information_04012025.py  pareto_generator.ipynb  plot_OU_from_simulations.py  simulate_OU_process.py  tissue_999.vtk  track_cellHist.py  transfer_entropy_04012025.py  validate_stress_criterion_for_proliferation.py  validate_stress_implementation.py  vtk_VolRender_05012021.py  vtk_VolRender_mix_03202025.py  vtk_VolRender_mix_04012025.py  write_vtk_from_JSON_03202025.py  write_vtk_from_JSON_04012025.py  write_vtk_from_JSON_05012021.py
example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cuda_indexing_test-checkpoint.ipynb  lognormal_generator-checkpoint.ipynb  mechanical_information_flow_05312025-checkpoint.ipynb  pareto_generator-checkpoint.ipynb  tmp-checkpoint.ipynb
example/InformationFlow/: KL_distance.ipynb  kolmogrov_complexity.ipynb  mutual_information.ipynb  transfer_entropy.ipynb
example/InformationFlow/.ipynb_checkpoints/: mutual_information-checkpoint.ipynb
example/OU_process_simulation/: plot_OU_from_simulations.py  sim  simulate_OU_process.cpp  simulate_OU_process.py
example/OU_process_simulation/.ipynb_checkpoints/: simulate_OU_process-checkpoint.ipynb
example/celadro_3D_scripts_final/plot/: animation.py  archive.py  plot.py  plot_03012022.py
src/: CMakeLists.txt  configure.cpp  cuda.cu  cuda.h  derivatives.hpp  error_msg.hpp  files.cpp  files.hpp  header.hpp  init.cpp  main.cpp  model.hpp  options.cpp  proliferate.cpp  random.cpp  reduce.h  run.cu  serialization.cpp  serialization.hpp  stencil.hpp  tools.hpp  vec_cuda.h  write.cpp
